# CaseWare

./: .gitignore  AI_USAGE.md  ARCHITECTURE_AWS.md  EXECUTION_PLAN.md  README.md  REVIEW_CHECKLIST.md  docker-compose.yml  main.py  pyproject.toml
db/: changes.sql  init.sql
events/: events.jsonl
interop_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lake/cases/date=2026-02-16/: data.jsonl
lake/cases/date=2026-02-17/: data.jsonl
lake/cases/date=2026-02-18/: data.jsonl
lake/cases/date=2026-02-19/: data.jsonl
lake/cases/date=2026-02-20/: data.jsonl
lake/cases/date=2026-02-21/: data.jsonl
lake/cases/date=2026-02-22/: data.jsonl
lake/cases/date=2026-02-23/: data.jsonl
lake/cases/date=2026-02-24/: data.jsonl
lake/cases/date=2026-02-25/: data.jsonl
lake/cases/date=2026-02-26/: data.jsonl
lake/cases/date=2026-02-27/: data.jsonl
lake/cases/date=2026-02-28/: data.jsonl
lake/cases/date=2026-03-01/: data.jsonl
lake/cases/date=2026-03-02/: data.jsonl
lake/cases/date=2026-03-03/: data.jsonl
lake/cases/date=2026-03-04/: data.jsonl
lake/cases/date=2026-03-05/: data.jsonl
lake/cases/date=2026-03-06/: data.jsonl
lake/cases/date=2026-03-07/: data.jsonl
lake/cases/date=2026-03-08/: data.jsonl
lake/cases/date=2026-03-09/: data.jsonl
src/: config.py
src/application/: ingest_service.py  search_index.py
src/domain/: models.py  ports.py
src/infrastructure/: checkpoint.py  database.py  event_emitter.py  lake_writer.py
src/presentation/: api.py
state/: checkpoint.json
tests/: conftest.py  test_ingest.py
(+40 files in other folders)
